qa: switch monthrash to a 3-node cluster with one slow node
Signed-off-by: Greg Farnum <gfarnum@redhat.com>

--- a/qa/suites/rados/monthrash/msgr-failures/mon-delay.yaml
+++ b/qa/suites/rados/monthrash/msgr-failures/mon-delay.yaml
@@ -9,3 +9,9 @@ overrides:
         ms inject internal delays: .002
       mgr:
         debug monc: 10
+      mon.c:
+        ms inject socket failures: 2500
+        ms inject delay type: mon mds osd mgr client
+        ms inject delay probability: 1
+        ms inject delay max: 1
+        ms inject internal delays: .002
